--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,17 +1,22 @@
-
 <div class="row">
   <div class="col-sm-12 text-xs-center bootstrap-welcome">
     <h1>Welcome <%= current_user.name %> <%= current_user.surname %> (<%= current_user.email %>)</h1>
     <div class="row">
       <div class="col-md-3 col-sm-3 col-xs-6">    
-        <% if current_user.avatar.to_s != "" %>
-          <%= image_tag current_user.avatar_url, :height => 150, class: "img-responsive" %>
-        <% end %>
+        <div class="card" style="width:400px">
+          <%= image_tag current_user.avatar_url, :height => 150, class: "card-img-top img-responsive", alt: current_user.name %>
+          <div class="card-body">
+            <h4 class="card-title"><%= current_user.name %> <%= current_user.surname %></h4>
+            <p class="card-text">Some example text.</p>
+            <%= link_to 'Editar', edit_user_registration_path(current_user), class: "btn btn-lg btn-primary" %>
+
+            <% ruta = (albums_path if current_user.albums.count != 1) || current_user.albums.first %>
+            <%= link_to 'albums', ruta, class:'btn btn-lg btn-outline-primary' %>
+
+            <%= link_to 'Log Out', eval("destroy_#{current_user.type.downcase}_session_path"), method: :delete, class: "btn btn-lg btn-warning float-right" %>
+          </div>
+        </div>
       </div>
     </div>
-
-    <p><%= link_to 'edit profile', edit_user_registration_path(current_user) %></p>
-    <p><%= link_to 'logout', eval("destroy_#{current_user.type.downcase}_session_path"), method: :delete %></p>
-
   </div>
 </div>
