--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,32 +12,65 @@
       <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
       <%= csrf_meta_tags %>
 
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"></script>
+  
     </head>
     <body>
+    
 
+<nav class="navbar navbar-expand-md bg-dark navbar-dark">
+  <a class="navbar-brand" href="#">Navbar</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="collapsibleNavbar">
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link" href="#">Link</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Link</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Link</a>
+      </li>    
+    </ul>
+  </div>  
+</nav>    
+
+      <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+        <!-- Brand/logo -->
+        <%= link_to image_tag('logo.png', :width=>"35"), root_path, class: 'navbar-brand' %> 
+
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        
+        <!-- Links -->
+        <% if current_user %>
+          <div class="collapse navbar-collapse" id="collapsibleNavbar">
+
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <%= link_to 'Editar perfil', edit_user_registration_path(current_user), class: "nav-link" %>
+              </li>
+              <li class="nav-item">
+                <% if current_user.albums.count != 1 %>
+                  <%= link_to 'albums', albums_path, class: "nav-link" %>
+                <% else %>
+                  <% album = current_user.albums.first %>
+                  <%= link_to 'albums', album, class: "nav-link" %>
+                <% end %>
+              </li>
+            </ul>
+            <ul class="navbar-nav">          
+              <%= button_to 'logout', eval("destroy_#{current_user.type.downcase}_session_path"), method: :delete, class:'btn btn-danger navbar-btn' %>
+            </ul>
+          </div>
+        <% end %>
+      </nav>
 
       <div class="container">
-        <nav class="navbar navbar-expand-sm bg-light">
-          <!-- Brand/logo -->
-          <%= link_to image_tag('logo.png', :width=>"35"), root_path, class: 'navbar-brand' %> 
-          
-          <!-- Links -->
-          <ul class="nav nav-pills" role="tablist">
-            <% if current_user %>
-              <li class="nav-item">
-                <%= link_to 'edit profile', edit_user_registration_path(current_user), class:'btn btn-lg btn-outline-primary', role:"button" %>
-              </li>
-              <li class="nav-item">
-                <%= link_to 'albums', albums_path, class:'btn btn-lg btn-outline-primary', role:"button" %>
-              </li>
-              <li class="nav-item">
-                <%= link_to 'logout', eval("destroy_#{current_user.type.downcase}_session_path"), method: :delete, class:'btn btn-lg btn-outline-primary' %>
-
-              </li>
-            <% end %>
-          </ul>
-        </nav>
-              
         <div class="container-fluid">
           <%= render partial: 'shared/flash' unless flash.empty? %>
           <%= yield %>
@@ -45,6 +78,6 @@
       </div>
 
 
-    </body>
+  </body>
 </html>
 
