--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,27 +27,25 @@
         </button>
         
         <!-- Links -->
-        <% if current_user %>
           <div class="collapse navbar-collapse" id="collapsibleNavbar">
 
             <ul class="navbar-nav">
-              <li class="nav-item">
-                <%= link_to 'Editar perfil', edit_user_registration_path(current_user), class: "nav-link" %>
+              <li class="nav-item" style="margin-right:5px; margin-bottom:4px;">
+                <%= link_to "Editar perfil", edit_user_registration_path(current_user), class: "btn btn-lg btn-primary" %>
               </li>
-              <li class="nav-item">
-                <% if current_user.albums.count != 1 %>
-                  <%= link_to 'albums', albums_path, class: "nav-link" %>
-                <% else %>
-                  <% album = current_user.albums.first %>
-                  <%= link_to 'albums', album, class: "nav-link" %>
-                <% end %>
+              <li class="nav-item" style="margin-right:5px; margin-bottom:4px;">
+
+                <% ruta = (albums_path if !current_user || current_user.albums.count != 1) || current_user.albums.first %>
+                <%= link_to 'albums', ruta, class:'btn btn-lg btn-outline-primary' %>
               </li>
             </ul>
             <ul class="navbar-nav">
-              <%= button_to 'logout', eval("destroy_#{current_user.type.downcase}_session_path"), method: :delete, class:'btn btn-danger navbar-btn' %>
+              <% ruta = (root_path if !current_user) || eval("destroy_#{current_user.type.downcase}_session_path") %>
+              <% label = ("Log in" if !current_user) || "Log out" %>
+              <% met = (:get if !current_user) || :delete %>
+              <%= button_to label, ruta, method: met, class:'btn btn-lg btn-warning navbar-btn' %>
             </ul>
           </div>
-        <% end %>
       </nav>
 
       <div class="container">
