--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -11,9 +11,10 @@
               <%= f.label :email %>
               <%= f.email_field :email, autofocus: true, value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email), class: "form-control" %>
             </div>
-            <%= f.submit  t('.resend_confirmation', :default => "Resend confirmation instructions"), class: "btn btn-primary" %>
+            <%= f.submit  t('.resend_confirmation', :default => "Resend confirmation instructions"), class: "btn btn-lg btn-primary" %>
         <%end%>
       </div>
+      <br/>
       <%= render "devise/shared/links" %>
     </div>
   </div>
