--- a/app/views/albums/_form.html.erb
+++ b/app/views/albums/_form.html.erb
@@ -13,7 +13,7 @@
   <% end %>
 
   <div class="form-group">
-    <%= f.label :name %>
+    <%= f.label :nombre %>
     <%= f.text_field :name, autofocus: true, class: "form-control" %>
   </div>
 
@@ -27,6 +27,6 @@
   </div>
 
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit  t('.update', :default => "Actualizar"), class: "btn btn-lg btn-primary" %>
   </div>
 <% end %>
