--- a/app/views/albums/_links.html.erb
+++ b/app/views/albums/_links.html.erb
@@ -1,11 +1,21 @@
-<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+<nav class="navbar navbar-expand-sm">
   <ul class="navbar-nav">
+    <li class="nav-item" style="margin-right:5px; margin-bottom:4px;">
+      <%= link_to 'Volver', albums_path, class:'btn btn-lg btn-secondary' %>
+    </li>
+
     <li class="nav-item" style="margin-right:5px; margin-bottom:4px;">
       <%= link_to 'Editar', edit_album_path(@album), class:'btn btn-lg btn-primary' %>
     </li>
+
+    <li class="nav-item" style="margin-right:5px; margin-bottom:4px;">
+      <%= link_to 'Añadir foto', new_photo_path, class:'btn btn-lg btn-info' %>
+    </li>
+    
     <li class="nav-item" style="margin-right:5px; margin-bottom:4px;">
       <%= link_to 'Destroy', @album, method: :delete, data: { confirm: 'Are you sure?' }, class:'btn btn-lg btn-danger' %>
     </li>
+
   </ul>
 </nav>
 <br/>
