--- a/app/views/albums/index.html.erb
+++ b/app/views/albums/index.html.erb
@@ -1,27 +1,23 @@
-<p id="notice"><%= notice %></p>
+<h1>Albumes</h1>
 
-<h1>Albums</h1>
+<div class="list-group">
+  <table class="table table-striped">
+    <tbody>
+      <% @albums.each do |album| %>
+          <tr>
+            <td><%= link_to album.name, album, class: "list-group-item list-group-item-action" %></td>
+            <td width="80px">
+              <span class="badge badge-<%= ("secondary" if album.public == false) || "success" %>">
+                <span class="glyphicon <%= ("glyphicon-minus-sign" if album.public == false) || "glyphicon-globe" %>"></span> <%= ("Privado" if album.public == false ) || "Público" %>
+              </span>
+              <br/><%= album.photos.count %> photos</td>
+            <td width="20px"><%= link_to 'Editar', edit_album_path(album), class:'btn btn-lg btn-primary' %></td>
+            <td width="20px"><%= link_to 'Eliminar', @album, method: :delete, data: { confirm: 'Are you sure?' }, class:'btn btn-lg btn-danger' %></td>
+          </tr>
+      <% end %>
+    </tbody>
+  </table>
+</div>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<%= link_to 'Nuevo', new_album_path, class:'btn btn-lg btn-info' %>
 
-  <tbody>
-    <% @albums.each do |album| %>
-      <tr>
-        <td><%= album.name %></td>
-        <td><%= link_to 'Show', album %></td>
-        <td><%= link_to 'Edit', edit_album_path(album) %></td>
-        <td><%= link_to 'Destroy', album, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Album', new_album_path %>
