--- a/app/views/albums/new.html.erb
+++ b/app/views/albums/new.html.erb
@@ -1,17 +1,17 @@
-<h1>New Album</h1>
+<h1>Nuevo Album</h1>
 
 <div class="row">
   <div class="col-xs-12 col-md-6 push-md-3">
     <div class="panel panel-default panel-boundary">
       <div class="panel-heading">
-        <h2>Edit Album</h2>
+        <h2>Creando Album</h2>
       </div>
       <div class="panel-body">
             
         <%= render 'form', album: @album %>
 
       </div>
-      <%= link_to 'Back', albums_path %>
+      <%= link_to 'Volver', albums_path, class:'btn btn-lg btn-secondary' %>
     </div>
   </div>
 </div>
