--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,8 @@
     
       <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
         <!-- Brand/logo -->
-        <%= link_to image_tag('logo.png', :width=>"35"), root_path, class: 'navbar-brand' %> 
+        <% img = ('logo.png' if !current_user || !current_user.avatar) || current_user.avatar %>
+        <%= link_to image_tag(img, :width=>"35"), root_path, class: 'navbar-brand' %> 
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
           <span class="navbar-toggler-icon"></span>
@@ -34,9 +35,23 @@
                 <%= link_to "Editar perfil", edit_user_registration_path(current_user), class: "btn btn-lg btn-primary" %>
               </li>
               <li class="nav-item" style="margin-right:5px; margin-bottom:4px;">
-
                 <% ruta = (albums_path if !current_user || current_user.albums.count != 1) || current_user.albums.first %>
-                <%= link_to 'albums', ruta, class:'btn btn-lg btn-outline-primary' %>
+                <div class="btn-group">
+                  <%= link_to 'albumes', ruta, class:'btn btn-lg btn-info' %>
+                  <button type="button" class="btn btn-info dropdown-toggle dropdown-toggle-split" data-toggle="dropdown">
+                    <span class="caret"></span>
+                  </button>
+                  <% if current_user %> 
+                    <div class="dropdown-menu">
+                      <% current_user.albums.each do |alb| %>
+                        <%= link_to alb.name, alb, class: "dropdown-item"  %>
+                      <% end %>
+                      <div class="dropdown-divider"></div>
+                      <%= link_to "Nuevo album", new_album_path, class: "dropdown-item"  %>
+                    </div>
+                  <% end %>
+                </div>
+                
               </li>
             </ul>
             <ul class="navbar-nav">
