--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,7 +4,7 @@
     <div class="row">
       <div class="col-md-3 col-sm-3 col-xs-6">    
         <div class="card" style="width:400px">
-          <%= image_tag current_user.avatar_url, :height => 150, class: "card-img-top img-responsive", alt: current_user.name %>
+          <%= image_tag current_user.avatar_url, :height => 150, class: "card-img-top img-responsive", alt: current_user.name if current_user.avatar? %>
           <div class="card-body">
             <h4 class="card-title"><%= current_user.name %> <%= current_user.surname %></h4>
             <p class="card-text">Some example text.</p>
