--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
     
       <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
         <!-- Brand/logo -->
-        <% img = ('logo.png' if !current_user || !current_user.avatar) || current_user.avatar %>
+        <% img = ('logo.png' if !current_user || !current_user.avatar?) || current_user.avatar %>
         <%= link_to image_tag(img, :width=>"35"), root_path, class: 'navbar-brand' %> 
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -31,9 +31,11 @@
           <div class="collapse navbar-collapse" id="collapsibleNavbar">
 
             <ul class="navbar-nav">
-              <li class="nav-item" style="margin-right:5px; margin-bottom:4px;">
-                <%= link_to "Editar perfil", edit_user_registration_path(current_user), class: "btn btn-lg btn-primary" %>
-              </li>
+              <% if current_user %>
+                <li class="nav-item" style="margin-right:5px; margin-bottom:4px;">
+                  <%= link_to "Editar perfil", edit_user_registration_path(current_user), class: "btn btn-lg btn-primary" %>
+                </li>
+              <% end %>
               <li class="nav-item" style="margin-right:5px; margin-bottom:4px;">
                 <% ruta = (albums_path if !current_user || current_user.albums.count != 1) || current_user.albums.first %>
                 <div class="btn-group">
