Share on linkedin

--- a/app/views/albums/show.html.erb
+++ b/app/views/albums/show.html.erb
@@ -29,8 +29,8 @@
                   <span class="btn-facebook fa fa-twitter"></span>
                 <% end %>
                 
-                <%= link_to "https://twitter.com/share?url=#{photo_url(photo)}",  title: 'Compartir en Twitter', :class=>"btn btn-outline-primary btn-social-icon btn-linkedin" do %>
-                  <span class="btn-facebook fa fa-linkedin"></span>
+                <%= link_to "https://www.linkedin.com/shareArticle?mini=true&url=#{photo_url(photo)}",  title: 'Compartir en LinkedIn', :class=>"btn btn-outline-primary btn-social-icon btn-linkedin" do %>
+                  <span class="btn-linkedin fa fa-linkedin"></span>
                 <% end %>
                 
               </div>
