Share on linked in

--- a/app/views/albums/show.html.erb
+++ b/app/views/albums/show.html.erb
@@ -29,7 +29,7 @@
                   <span class="btn-facebook fa fa-twitter"></span>
                 <% end %>
                 
-                <%= link_to "https://www.linkedin.com/shareArticle?mini=true&url=#{photo_url(photo)}",  title: 'Compartir en LinkedIn', :class=>"btn btn-outline-primary btn-social-icon btn-linkedin" do %>
+                <%= link_to "https://www.linkedin.com/shareArticle?mini=true&url=#{root_url[0..-2]}#{photo.image.url}&title=#{photo.name}&summary=#{photo.album.name}: #{photo.name}",  title: 'Compartir en LinkedIn', :class=>"btn btn-outline-primary btn-social-icon btn-linkedin" do %>
                   <span class="btn-linkedin fa fa-linkedin"></span>
                 <% end %>
                 
