--- a/app/views/albums/show.html.erb
+++ b/app/views/albums/show.html.erb
@@ -20,13 +20,17 @@
 
                 <%= link_to 'Editar', edit_photo_path(photo), class: "btn btn-primary" %>
 
-  
-                <%= link_to "https://www.facebook.com/sharer/sharer.php?u=#{photo_url(photo)}",  title: 'Compartir en Facebook', :class=>"btn btn-outline-primary btn-social btn-facebook" do %>
+                <%= link_to "https://www.facebook.com/sharer/sharer.php?u=#{root_url[0..-2]}#{photo.image.url}&title=#{photo.name}",  title: 'Compartir en Facebook', :class=>"btn btn-outline-primary btn-social btn-facebook" do %>
                   <span class="btn-facebook fa fa-facebook"></span>
                 <% end %>
+                
+                
+                <%= link_to "https://twitter.com/share?url=#{root_url[0..-2]}#{photo.image.url}&text=#{photo.album.name}: #{photo.name}",  title: 'Compartir en Twitter', :class=>"btn btn-outline-primary btn-social-icon btn-twitter" do %>
+                  <span class="btn-twitter fa fa-twitter"></span>
+                <% end %>
 
-                <%= link_to "https://twitter.com/share?url=#{photo_url(photo)}",  title: 'Compartir en Twitter', :class=>"btn btn-outline-primary btn-social-icon btn-twitter" do %>
-                  <span class="btn-facebook fa fa-twitter"></span>
+                <%= link_to "https://twitter.com/intent/tweet?url=#{root_url[0..-2]}#{photo.image.url}&text=#{photo.album.name}: #{photo.name}&source=#{root_url}",  title: 'Compartir en Twitter', :class=>"btn btn-outline-primary btn-social-icon btn-twitter" do %>
+                  <span class="btn-twitter fa fa-twitter"></span>
                 <% end %>
                 
                 <%= link_to "https://www.linkedin.com/shareArticle?mini=true&url=#{root_url[0..-2]}#{photo.image.url}&title=#{photo.name}&summary=#{photo.album.name}: #{photo.name}",  title: 'Compartir en LinkedIn', :class=>"btn btn-outline-primary btn-social-icon btn-linkedin" do %>
