--- a/app/views/albums/show.html.erb
+++ b/app/views/albums/show.html.erb
@@ -24,11 +24,6 @@
                   <span class="btn-facebook fa fa-facebook"></span>
                 <% end %>
                 
-                
-                <%= link_to "https://twitter.com/share?url=#{root_url[0..-2]}#{photo.image.url}&text=#{photo.album.name}: #{photo.name}",  title: 'Compartir en Twitter', :class=>"btn btn-outline-primary btn-social-icon btn-twitter" do %>
-                  <span class="btn-twitter fa fa-twitter"></span>
-                <% end %>
-
                 <%= link_to "https://twitter.com/intent/tweet?url=#{root_url[0..-2]}#{photo.image.url}&text=#{photo.album.name}: #{photo.name}&source=#{root_url}",  title: 'Compartir en Twitter', :class=>"btn btn-outline-primary btn-social-icon btn-twitter" do %>
                   <span class="btn-twitter fa fa-twitter"></span>
                 <% end %>
@@ -36,7 +31,15 @@
                 <%= link_to "https://www.linkedin.com/shareArticle?mini=true&url=#{root_url[0..-2]}#{photo.image.url}&title=#{photo.name}&summary=#{photo.album.name}: #{photo.name}",  title: 'Compartir en LinkedIn', :class=>"btn btn-outline-primary btn-social-icon btn-linkedin" do %>
                   <span class="btn-linkedin fa fa-linkedin"></span>
                 <% end %>
-                
+
+                <%= link_to "https://mail.google.com/mail/u/0/?view=cm&su=#{photo.album.name}: #{photo.name}&body=#{photo.album.name}: #{photo.name}%0D%0A%0D%0A#{root_url[0..-2]}#{photo.image.url}%0D%0A%0D%0AFrom #{root_url}",  title: 'Enviar desde Gmail', :class=>"btn btn-outline-primary btn-social-icon btn-google" do %>
+                  <span class="btn-linkedin fa fa-google"></span>
+                <% end %>
+
+                <%= mail_to "", subject: "#{photo.album.name} - #{photo.name}", body: "#{photo.album.name} - #{photo.name}\r#{root_url[0..-2]}#{photo.image.url}\rFrom #{root_url}", title: 'Enviar por correo', :class=>"btn btn-outline-primary btn-social-icon btn-envelope" do %>
+                  <span class="btn-envelope fa fa-envelope"></span>
+                <% end %>
+
               </div>
               <%= link_to image_tag(photo.image.thumb.url, alt: photo.name, :class=>"card-img-top img-thumbnail"), photo %>
             </div>
