--- a/app/views/photos/edit.html.erb
+++ b/app/views/photos/edit.html.erb
@@ -1,6 +1,19 @@
 <h1>Editing Photo</h1>
 
-<%= render 'form', photo: @photo %>
+<div class="row">
+  <div class="col-xs-12 col-md-6 push-md-3">
+    <div class="panel panel-default panel-boundary">
+      <div class="panel-heading">
+        <h2>Creando Foto</h2>
+      </div>
+      <div class="panel-body">
+            
+        <%= render 'form', photo: @photo %>
 
-<%= link_to 'Show', @photo %> |
-<%= link_to 'Back', photos_path %>
+      </div>
+      <%= link_to 'Ver', @photo, class:'btn btn-lg btn-info' %>
+      <%= link_to 'Volver al album', Album.find(@photo.album_id), class:'btn btn-lg btn-secondary' %>
+    </div>
+  </div>
+</div>
+
